@@ -288,7 +288,6 @@ S3method("hasFile", "GenericDataFileSet")
 S3method("indexOf", "GenericDataFileSet")
 S3method("is.na", "GenericDataFileSet")
 S3method("length", "GenericDataFileSet")
-S3method("na.omit", "GenericDataFileSet")
 S3method("nbrOfFiles", "GenericDataFileSet")
 S3method("reorder", "GenericDataFileSet")
 S3method("rep", "GenericDataFileSet")
